[tool.poetry]
name = "HSS_lab5"
version = "0.1.0"
description = "IASA HighScalable Systems lab 5"
authors = ["Illia Likhoshva <ilyaliko64@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.5"
numpy = "^1.19.4"
tqdm = "^4.54.1"
geopy = "^2.0.0"
pyspark = "^3.0.1"
Faker = "^5.0.2"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
